# head_model

./: .gitignore  CMakeLists.txt  primary_source_model_status_roadmap_ahnesjo_style_ccc_s_c.md
extrafocal/: CMakeLists.txt  convolve.cpp  dev.cpp
include/: aperture.h  convolve.h  gaussian.h  grid2d.h  h5_model.h
include/headmodel/collimation/: JawAperture.h  JawTransmissionModel.h  RectSignedDistance.h
include/headmodel/fluence/: DualSourceFluenceModel.h  ExtraFocalFluence.h  FiniteSourceFluence.h  FluenceContext.h  FluenceModel.h  IdealPrimaryFluence.h
include/headmodel/geom/: Vec3.h
include/headmodel/grid/: Grid2D.h
include/headmodel/io/: ImageIO.h
include/headmodel/source/: GaussianSourceSampler2D.h  SourceSampler2D.h
src/: aperture.cpp  convolve.cpp  gaussian.cpp  h5_model.cpp  main.cc  main.cpp
